Trying to fix blank space issue on iOS.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -72,16 +72,16 @@ body {
 
 .floater2 {
 	display: none;
-	padding: 0 10px;
+	padding: 0 0 0 10px;
 	margin: 0;
 	float: right;
 }
 
 .floater2 span.floaterbox {
 	display: inline-block;
-	padding: 5px 10px 0 0;
+	padding: 5px 6px 0 0;
 	border: none;
-	margin: 0 10px 0 0;
+	margin: 0;
 }
 
 section {
@@ -168,7 +168,7 @@ footer {
 @media screen and (max-width: 960px) {
   	.menu {
 		position: relative;
-		width: 100%;
+		width: auto;
 		padding: 5px 10px;
 		border: none;
 		border-bottom: 1px solid #aaa;
